make preview size more accurate to prevent unnecessary overflow scrolling

--- a/life.css
+++ b/life.css
@@ -21,8 +21,6 @@ div#follower {
     position: absolute;
     top: 0px;
     left: 0px;
-    width:  768px;
-    height: 512px;
     background-repeat: no-repeat;
 }
 
